<resources>
    <!-- Strings for app/activity names -->
    <string name="app_name">parq</string>
    <string name="title_activity_driver">Map</string>
    <string name="title_activity_host">Host</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Nav drawer strings -->
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="host">Host</string>

    <!--  Request Strings -->
    <string name="api_address">http://162.243.244.79</string>
    <string name="reservations_endpoint">reservations</string>
    <string name="spots_endpoint">spots</string>
    <string name="google_directions_endpoint">https://maps.googleapis.com/maps/api/directions/json</string>
    <string name="firebase_endpoint">https://parq.firebaseio.com</string>

    <!-- Driver Button Strings -->
    <string name="find_spot_button_text">Find Spot</string>
    <string name="navigate_text">Navigate to spot</string>
    <string name="end_reservation">Leave spot</string>
    <string name="arrive_spot_button_text">Arrive</string>
    <string name="return_to_nav">Return to navigation</string>

    <!-- Amazon Strings -->
    <string name="identity_pool_id">us-east-1:a6670f81-9a08-4182-b29d-c8ae777f2b00</string>
    <string name="facebook_login_provider">graph.facebook.com</string>
    <string name="developer_provider_name">login.mmm.parq</string>
    <string name="bucket_name">parq</string>

    <!-- Misc -->
    <string name="end_transaction_text"></string>
    <string name="no_ratings">No ratings</string>
    <string name="nav_intent_uri">google.navigation:q=%1$s,%2$s</string>
    <string name="maps_package">com.google.android.apps.maps</string>
    <string name="cost">$%1$2f</string>
    <string name="time_parked">Time parked</string>
    <string name="net_cost">Net cost</string>
    <string name="prompt_comment">Comment</string>
    <string name="submit">Submit</string>

    <!-- Strings related to login -->
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="snackbar_register">Registration successful! Please log in.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!--Spot List Strings-->
    <string name="host_home_titlebar">Your Spots</string>

    <!--Spot Creation Strings-->
    <string name="host_new_spot_titlebar">Create New Spot</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="action_create_spot">Create Spot</string>

    <!--Spot Detail Strings-->
    <string name="host_spot_details_titlebar">Spot Details</string>
    <string name="spot_rating">Spot Rating</string>
    <string name="num_ratings">Number of Ratings: %d</string>
    <string name="occupied">Occupied</string>
    <string name="vacant">Vacant</string>
    <string name="action_upload_spot">Upload Spot</string>
    <string name="facebook_app_id">1011978195552833</string>

    <!--Spot Reviews Strings-->
    <string name="host_spot_reviews_titlebar">Spot Reviews</string>

    <!-- Strings related to profile -->
    <string name="edit_profile">Edit profile</string>
    <string name="done">Done</string>
    <string name="profile_photo">Profile photo</string>
    <string name="phone_placeholder">No phone number :(</string>
    <string name="birthday_placeholder">No birthday :(</string>
    <string name="update">Update</string>
</resources>
