<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/driver_menu_options"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_place_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/drawer_payment"
            android:icon="@drawable/ic_credit_card_24dp"
            android:title="@string/payment" />

        <item
            android:id="@+id/drawer_history"
            android:icon="@drawable/ic_restore_24dp"
            android:title="@string/history" />

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/logout" />

    </group>

    <group
        android:id="@+id/host_menu_options"
        android:checkableBehavior="none" >

        <item
            android:id="@+id/drawer_host"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/host" />

    </group>
</menu>
